# few-shot-learning-for-CLIP

./: .gitignore  AGENTS.md  README.md  START_HERE.md  mid-report.md  pyproject.toml
DPC/: README.md  method.py  trainer.py
LP++/: README.md
Promptsrc/: README.md
ZeroShotCLIP/: README.md
common/: methods.py
data/: README.md
promptSRC-NC/: README.md  RUNBOOK.md  modal_app.py  neighborhood_promptsrc_research_proposal.md  neighborhood_promptsrc_technical_spec.md  pyproject.toml
promptSRC-NC/configs/: vit_b16_ep5_batch4_4ctx_nc.yaml
promptSRC-NC/promptsrc_nc/: __init__.py  aggregate.py  config.py  cost_profile.py  data.py  diagnostics.py  eval.py  imagenet_templates.py  losses.py  model.py  neighbors.py  pair_dataset.py  provenance.py  smoke.py  structured_logging.py  train.py
promptSRC-NC/results/constrained_report/: build_report.py  delta_summary.csv  diagnostics_summary.csv  per_seed_accuracy.csv  results_tables.md  summary_accuracy.csv
promptSRC-NC/results/promptsrc-nc-main-20260510-192529/results/: diagnostics_summary.csv  eval_summary.csv  eval_summary.json  runs.jsonl  runtime_summary.csv
promptSRC-NC/results/promptsrc-nc-main-20260510-192531/results/: runtime_summary.csv
promptSRC-NC/results/promptsrc-nc-main-20260510-192533/results/: diagnostics_summary.csv  eval_summary.csv  eval_summary.json  runs.jsonl  runtime_summary.csv
promptSRC-NC/tests/: test_controls_and_aggregation.py  test_modal_and_cost_profile.py  test_promptsrc_fidelity.py  test_provenance_validation.py  test_scientific_invariants.py  test_smoke_path.py  test_status_logging.py
(+83 files in other folders)
