[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "few-shot-learning-for-clip"
version = "0.1.0"
description = "Shared data and experiment scaffolding for few-shot CLIP method comparisons."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "open_clip_torch>=2.24",
  "kagglehub>=0.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "Pillow>=10.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "ftfy>=6.1",
  "regex>=2023.0",
  "timm>=1.0.17",
  "huggingface_hub>=0.20",
  "safetensors>=0.4",
]

[tool.setuptools.packages.find]
include = ["common*"]
exclude = ["tests*"]
